--- a/week1/dependency_injection.html
+++ b/week1/dependency_injection.html
@@ -2,7 +2,7 @@
 <html ng-app="DIApp">
   <head>
     <meta charset="utf-8">
-    <script src="angular.min.js"></script>
+    <script src="../angular.min.js"></script>
     <script src="di.js"></script>
     <title>Dependency Injection in JS and NG</title>
   </head>
