--- a/week1/index.html
+++ b/week1/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="angular.min.js"></script>
+    <script src="../angular.min.js"></script>
     <script src="app.js"></script>
     <style>
       body {
