Week 2 lesson 14: Intro to digest cycle

--- a/week2/customFilters.html
+++ b/week2/customFilters.html
@@ -29,8 +29,8 @@
           </pre>
         </li>
         <li>Register the filter factory with the module. This is done in much
-          that same way that the controlleris registered with the module, i.e.
-          <br><pre>
+          that same way that the controller is registered with the module, i.e.
+          <pre>
             angular.module('app', [])
             .controller('ctrl', Ctrl)
             .filter('custom', CustomFilterFactory)
