Week 2 lesson 15: Digest and Apply functions

--- a/week2/digestCycle.html
+++ b/week2/digestCycle.html
@@ -33,17 +33,18 @@
           Up Once Counter (once)
         </button>
         <br><br>
+      </div>
       <div>
-        <div>
-          <button ng-click='incrementIncrementingCounter()'>
-            Up Incrementing Counter (once)
-          </button>
-          <br><br>
-        <div>
-        <div>
-          <!-- Another way to set up a watch: interpolation -->
-          Once counter: {{onceCounter}} <br>
-          Incrementing counter: {{incrementingCounter}}<br>
+        <button ng-click='incrementIncrementingCounter()'>
+          Up Incrementing Counter (once)
+        </button>
+        <br><br>
+      </div>
+      <div>
+        <!-- Another way to set up a watch: interpolation -->
+        Once counter: {{onceCounter}} <br>
+        Incrementing counter: {{incrementingCounter}}<br>
+      </div>
     </div>
     <div>
       <p>Typically, user interactions on a page are handled by vanilla JS and its
