Refactor and rename files for clarity

--- a/week1/06-NameCalculator.html
+++ b/week1/06-NameCalculator.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="../angular.min.js"></script>
-    <script src="app.js"></script>
+    <script src="06-NameCalculator.js"></script>
     <style>
       body {
         font-size: 1.3em;
