--- a/week2/12-filters.html
+++ b/week2/12-filters.html
@@ -3,21 +3,19 @@
   <head>
     <meta charset="utf-8">
     <script src="../angular.min.js"></script>
-    <script src="inter.js"></script>
-    <title>Expressions and Interpolation</title>
+    <script src="12-filters.js"></script>
+    <title>Filters</title>
   </head>
   <body>
-    <h1>Expressions and Interpolation</h1>
+    <h1>Filters</h1>
     <div ng-controller="MsgController">
       {{name}} has a message for you: <br> {{sayMessage()}}
       <br>
       <div>
         <button ng-click="getBurrito()">Get a burrito!</button>
         <br>
-        <!-- If we use img src="sauce", we get 404 errors because the html
-        is processed way before angular has evaluated what {{burrito}} is.
-        Therefore, use ng-src instead, which makes angular block the image
-        from being fetched until it's good and ready.-->
+        Cost: {{cookieCost | currency : "##" : 4}}
+        <br>
         <img ng-src="../img/{{burrito}}_burrito.jpg">
       </div>
     </div>
