--- a/week2/13-customFilters.html
+++ b/week2/13-customFilters.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="../angular.min.js"></script>
-    <script src="customFilters.js"></script>
+    <script src="13-customFilters.js"></script>
     <title>Custom Filters</title>
   </head>
   <body ng-controller='MsgController'>
