--- a/week2/14-digestCycle.html
+++ b/week2/14-digestCycle.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src='../angular.min.js'></script>
-    <script src='digestCycle.js'></script>
+    <script src='14-digestCycle.js'></script>
     <title>Digest Cycle</title>
   </head>
   <body>
