--- a/week2/15-digestAndApply.html
+++ b/week2/15-digestAndApply.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src='../angular.min.js'></script>
-    <script src='digestAndApply.js'></script>
+    <script src='15-digestAndApply.js'></script>
     <title>Digest And Apply</title>
   </head>
   <body>
