--- a/week2/16-waysToBind.html
+++ b/week2/16-waysToBind.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src='../angular.min.js'></script>
-    <script src='waysToBind.js'></script>
+    <script src='16-waysToBind.js'></script>
     <title>1-way, 2-way and one-time binding</title>
   </head>
   <body>
