--- a/week2/16-waysToBind.html
+++ b/week2/16-waysToBind.html
@@ -9,7 +9,7 @@
   <body>
     <h1>1-way, 2-way and one-time binding</h1>
     <div ng-controller='BindingController'>
-      <p> Two-way binding example, using <code ng-nocompute>ng-model</code>. This will create a watcher;
+      <p> Two-way binding example, using <code>ng-model</code>. This will create a watcher;
       clicking the button shows "1" as the number of watchers.</p>
       <div>
         Name: <input type="text" ng-model="firstName">&nbsp;
