--- a/week1/08-dependencyInjection.html
+++ b/week1/08-dependencyInjection.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="../angular.min.js"></script>
-    <script src="08-dependency-injection.js"></script>
+    <script src="08-dependencyInjection.js"></script>
     <title>Dependency Injection in JS and NG</title>
   </head>
   <body>
